<resources>
    <string name="app_name">LunchTray</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_order">Start Order</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="three_bean_chilli">Three Bean Chilli</string>
    <string name="mushroom_pasta">Mushroom Pasta</string>
    <string name="spicy_black_beans">Spicy Black Bean Skillet</string>
    <string name="cancel">Cancel</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="next">Next</string>
    <string name="summer_salad">Summer Salad</string>
    <string name="butter_nut_squash_soup">Butternut Squash Soup</string>
    <string name="spicy_potatoes">Spicy Potatoes</string>
    <string name="coconut_rice">Coconut Rice</string>
    <string name="submit">Submit</string>
    <string name="order_summary">ORDER SUMMARY</string>
</resources>