<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SidedishFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.lunchtray.model.MainCourseViewModel" />

        <variable
            name="sideDishFragment"
            type="com.example.android.lunchtray.SidedishFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/side_margin">

        <RadioGroup
            android:id="@+id/sideDishOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/summer_salad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setSideDish(@string/summer_salad, 2.50)}"
                android:text="@string/summer_salad" />

            <RadioButton
                android:id="@+id/butter_nut_squash_soup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setSideDish(@string/butter_nut_squash_soup, 3.00)}"
                android:text="@string/butter_nut_squash_soup" />

            <RadioButton
                android:id="@+id/spicy_potatoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setSideDish(@string/spicy_potatoes, 2.00)}"
                android:text="@string/spicy_potatoes" />

            <RadioButton
                android:id="@+id/coconut_rice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setSideDish(@string/coconut_rice, 1.50)}"
                android:text="@string/coconut_rice" />
        </RadioGroup>

        <TextView
            android:id="@+id/subtotal"
            style="@style/Widget.LunchTray.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@{@string/subtotal_price(viewModel.sideDishCoursePriceDisplay)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sideDishOptions"
            tools:text="Subtotal $5.00" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/cancel"
            android:onClick="@{() -> sideDishFragment.cancelOrder()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtotal" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> sideDishFragment.goToNextScreen(viewModel.sideDishCoursePrice)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>